Change application to manage several media with the same EAN Media contain all medias in the library. Book, Game, Music, Video contain the description of media by EAN

--- a/web/src/main/resources/templates/book/book-all.html
+++ b/web/src/main/resources/templates/book/book-all.html
@@ -20,7 +20,7 @@
    </header>
 
    <div class="row endpage">
-      <div  th:if="${book.remaining > 0}" class="card col-lg-4 col-sm-6 col-xs-12 mx-auto" th:each="book : ${books}">
+      <div  th:if="${book.stock > -2*book.quantity}" class="card col-lg-4 col-sm-6 col-xs-12 mx-auto" th:each="book : ${books}">
          <div class="card-header row">
             <div class="col-sm">
                <h5 th:text="${book.title}"></h5>
@@ -30,17 +30,17 @@
             </div>
          </div>
          <div class="card-body center">
-            <img  class="img-fluid" th:src="${@environment.getProperty('zuul.url') + 'media-api/images/BOOK/' + book.id}" alt="photo"/>
+            <img  class="img-fluid" th:src="${@environment.getProperty('zuul.url') + 'media-api/images/BOOK/' + book.ean}" alt="photo"/>
          </div>
          <div class="card-footer row">
             <div class="input-group col-md-6">
                <div class="input-group-prepend mb-2">
                   <div class="input-group-text" th:text="#{label.stock}">Stock</div>
                </div>
-               <span class="form-control" th:text="${book.remaining}"> Remaining </span>
+               <span class="form-control" th:text="${book.stock}"> Remaining </span>
             </div>
             <div class="col-md-6">
-               <a class="btn btn-primary mb-2 float-right" th:href="@{/book/{bookId}(bookId=${book.id})}" th:text="#{label.info}">Informations</a>
+               <a class="btn btn-primary mb-2 float-right" th:href="@{/book/{bookId}(bookId=${book.ean})}" th:text="#{label.info}">Informations</a>
             </div>
          </div>
       </div>
