--- a/web/src/main/resources/templates/game/game-read.html
+++ b/web/src/main/resources/templates/game/game-read.html
@@ -15,7 +15,7 @@
          </div>
          <div class="col-sm my-auto">
             <a class="btn btn-primary mb-2  ml-2 float-right" th:href="@{/games}" th:text="#{label.back}">Back</a>
-            <a th:if="${canBorrow}" class="btn btn-primary mb-2 ml-2 float-right" th:href="@{/borrowing/{gameId}(gameId=${game.id})}" th:text="#{label.setAside}">Book</a>
+            <a th:if="${canBorrow}" class="btn btn-primary mb-2 ml-2 float-right" th:href="@{/borrowing/{gameEan}(gameEan=${game.ean})}" th:text="#{label.setAside}">Book</a>
          </div>
       </div>
    </header>
@@ -26,7 +26,7 @@
             <h5 th:text="#{label.information}"></h5>
          </div>
          <div class="card-body center">
-            <img  class="img-fluid" th:src="${@environment.getProperty('zuul.url') + 'media-api/images/GAME/' + game.id}" alt="photo"/>
+            <img  class="img-fluid" th:src="${@environment.getProperty('zuul.url') + 'media-api/images/GAME/' + game.ean}" alt="photo"/>
          </div>
          <div class="card-footer row">
             <div class="input-group">
@@ -47,7 +47,7 @@
                <div class="input-group-prepend mb-2">
                   <div class="input-group-text" th:text="#{label.stock}">Stock</div>
                </div>
-               <span class="form-control" th:text="${game.remaining}"> Remaining </span>
+               <span class="form-control" th:text="${game.stock}"> Remaining </span>
             </div>
          </div>
       </div>
