--- a/web/src/main/resources/templates/video/video-all.html
+++ b/web/src/main/resources/templates/video/video-all.html
@@ -20,7 +20,7 @@
    </header>
 
    <div class="row endpage">
-      <div  th:if="${video.remaining > 0}" class="card col-lg-4 col-sm-6 col-xs-12 mx-auto" th:each="video : ${videos}">
+      <div  th:if="${video.stock > -2*video.quantity}" class="card col-lg-4 col-sm-6 col-xs-12 mx-auto" th:each="video : ${videos}">
          <div class="card-header row">
             <div class="col-sm">
                <h5 th:text="${video.title}"></h5>
@@ -30,17 +30,17 @@
             </div>
          </div>
          <div class="card-body center">
-            <img  class="img-fluid" th:src="${@environment.getProperty('zuul.url') + 'media-api/images/VIDEO/' + video.id}" alt="photo"/>
+            <img  class="img-fluid" th:src="${@environment.getProperty('zuul.url') + 'media-api/images/VIDEO/' + video.ean}" alt="photo"/>
          </div>
          <div class="card-footer row">
             <div class="input-group col-md-6">
                <div class="input-group-prepend mb-2">
                   <div class="input-group-text" th:text="#{label.stock}">Stock</div>
                </div>
-               <span class="form-control" th:text="${video.remaining}"> Remaining </span>
+               <span class="form-control" th:text="${video.stock}"> Remaining </span>
             </div>
             <div class="col-md-6">
-               <a class="btn btn-primary mb-2 float-right" th:href="@{/video/{videoId}(videoId=${video.id})}" th:text="#{label.info}">Informations</a>
+               <a class="btn btn-primary mb-2 float-right" th:href="@{/video/{videoId}(videoId=${video.ean})}" th:text="#{label.info}">Informations</a>
             </div>
          </div>
       </div>
