--- a/web/src/main/resources/templates/video/video-all.html
+++ b/web/src/main/resources/templates/video/video-all.html
@@ -33,11 +33,17 @@
             <img  class="img-fluid" th:src="${@environment.getProperty('zuul.url') + 'media-api/images/VIDEO/' + video.ean}" alt="photo"/>
          </div>
          <div class="card-footer row">
-            <div class="input-group col-md-6">
+            <div th:if="${video.stock >= 0}" class="input-group col-md-6">
                <div class="input-group-prepend mb-2">
                   <div class="input-group-text" th:text="#{label.stock}">Stock</div>
                </div>
-               <span class="form-control" th:text="${video.stock}"> Remaining </span>
+               <span class="form-control" th:text="${video.stock}">Remaining </span>
+            </div>
+            <div th:if="${video.stock < 0}"  class="input-group col-md-6">
+               <div class="input-group-prepend mb-2">
+                  <div class="input-group-text" th:text="#{label.booking}">Booking</div>
+               </div>
+               <span class="form-control" th:text="${-video.stock}">Booking </span>
             </div>
             <div class="col-md-6">
                <a class="btn btn-primary mb-2 float-right" th:href="@{/video/{videoId}(videoId=${video.ean})}" th:text="#{label.info}">Informations</a>
