--- a/web/src/main/resources/templates/book/book-read.html
+++ b/web/src/main/resources/templates/book/book-read.html
@@ -15,8 +15,7 @@
          </div>
          <div class="col-sm my-auto">
             <a class="btn btn-primary mb-2 ml-2 float-right" th:href="@{/books}" th:text="#{label.back}">Back</a>
-            <a th:if="${book.stock>0}" class="btn btn-primary mb-2 ml-2 float-right" th:href="@{/borrowing/{bookEan}(bookEan=${book.ean})}" th:text="#{label.setAside}">Book</a>
-            <a th:if="${book.stock<=0}" class="btn btn-primary mb-2 ml-2 float-right" th:href="@{/booking/{bookEan}(bookEan=${book.ean})}" th:text="#{label.setAside}">Book</a>
+            <a th:if="${canBorrow}" class="btn btn-primary mb-2 ml-2 float-right" th:href="@{/booking/{bookEan}(bookEan=${book.ean})}" th:text="#{label.setAside}">Book</a>
          </div>
       </div>
    </header>
@@ -84,11 +83,22 @@
                <span class="form-control" th:text="${book.isbn}"> ISBN </span>
             </div>
 
-            <div class="input-group">
+            <div th:if="${book.stock > 0}" class="input-group">
                <div class="input-group-prepend mb-2">
                   <div class="input-group-text" th:text="#{label.stock}">Stock</div>
                </div>
-               <span class="form-control" th:text="${book.stock}"> Remaining </span>
+               <span class="form-control" th:text="${book.stock}">Stock</span>
+            </div>
+
+            <div th:if="${book.stock <= 0}" class="input-group">
+               <div class="input-group-prepend mb-2">
+                  <div class="input-group-text" th:text="#{label.bookingRank}">Booking rank</div>
+               </div>
+               <span class="form-control" th:text="${book.stock*-1}">Rank</span>
+               <div class="input-group-prepend mb-2">
+                  <div class="input-group-text" th:text="#{label.returnDate}">Next return</div>
+               </div>
+               <span class="form-control" th:text="${book.returnDate}">Date</span>
             </div>
 
             <div class="input-group">
