--- a/web/src/main/resources/templates/game/game-read.html
+++ b/web/src/main/resources/templates/game/game-read.html
@@ -15,7 +15,7 @@
          </div>
          <div class="col-sm my-auto">
             <a class="btn btn-primary mb-2  ml-2 float-right" th:href="@{/games}" th:text="#{label.back}">Back</a>
-            <a th:if="${canBorrow}" class="btn btn-primary mb-2 ml-2 float-right" th:href="@{/borrowing/{gameEan}(gameEan=${game.ean})}" th:text="#{label.setAside}">Book</a>
+            <a th:if="${canBorrow}" class="btn btn-primary mb-2 ml-2 float-right" th:href="@{/booking/{gameEan}(gameEan=${game.ean})}" th:text="#{label.setAside}">Book</a>
          </div>
       </div>
    </header>
@@ -43,12 +43,24 @@
                <span class="form-control" th:text="${game.format}">Format</span>
             </div>
 
-            <div class="input-group">
+            <div th:if="${game.stock > 0}" class="input-group">
                <div class="input-group-prepend mb-2">
                   <div class="input-group-text" th:text="#{label.stock}">Stock</div>
                </div>
-               <span class="form-control" th:text="${game.stock}"> Remaining </span>
+               <span class="form-control" th:text="${game.stock}"> Rank </span>
             </div>
+
+            <div th:if="${game.stock <= 0}" class="input-group">
+               <div class="input-group-prepend mb-2">
+                  <div class="input-group-text" th:text="#{label.bookingRank}">Booking rank</div>
+               </div>
+               <span class="form-control" th:text="${game.stock*-1}">Rank</span>
+               <div class="input-group-prepend mb-2">
+                  <div class="input-group-text" th:text="#{label.returnDate}">Next return</div>
+               </div>
+               <span class="form-control" th:text="${game.returnDate}">Date</span>
+            </div>
+
          </div>
       </div>
       <div class="card col-md-6 col-sm-12 mx-auto">
