--- a/web/src/main/resources/templates/video/video-read.html
+++ b/web/src/main/resources/templates/video/video-read.html
@@ -15,7 +15,7 @@
          </div>
          <div class="col-sm my-auto">
             <a class="btn btn-primary mb-2 ml-2 float-right" th:href="@{/videos}" th:text="#{label.back}">Back</a>
-            <a th:if="${canBorrow}" class="btn btn-primary mb-2 ml-2 float-right" th:href="@{/borrowing/{videoEan}(videoEan=${video.ean})}" th:text="#{label.setAside}">Book</a>
+            <a th:if="${canBorrow}" class="btn btn-primary mb-2 ml-2 float-right" th:href="@{/booking/{videoEan}(videoEan=${video.ean})}" th:text="#{label.setAside}">Book</a>
          </div>
       </div>
    </header>
@@ -43,12 +43,24 @@
                <span class="form-control" th:text="${video.format}">Format</span>
             </div>
 
-            <div class="input-group">
+            <div th:if="${video.stock > 0}" class="input-group">
                <div class="input-group-prepend mb-2">
                   <div class="input-group-text" th:text="#{label.stock}">Stock</div>
                </div>
-               <span class="form-control" th:text="${video.stock}"> stock </span>
+               <span class="form-control" th:text="${video.stock}">Stock</span>
             </div>
+
+            <div th:if="${video.stock <= 0}" class="input-group">
+               <div class="input-group-prepend mb-2">
+                  <div class="input-group-text" th:text="#{label.bookingRank}">Booking rank</div>
+               </div>
+               <span class="form-control" th:text="${video.stock*-1}">Rank</span>
+               <div class="input-group-prepend mb-2">
+                  <div class="input-group-text" th:text="#{label.returnDate}">Next return</div>
+               </div>
+               <span class="form-control" th:text="${video.returnDate}">Date</span>
+            </div>
+
          </div>
       </div>
 
