found bug in release booking

--- a/web/src/main/resources/templates/music/music-read.html
+++ b/web/src/main/resources/templates/music/music-read.html
@@ -15,7 +15,7 @@
          </div>
          <div class="col-sm my-auto">
             <a class="btn btn-primary mb-2 ml-2 float-right" th:href="@{/musics}" th:text="#{label.back}">Back</a>
-            <a th:if="${canBorrow}" class="btn btn-primary mb-2 ml-2 float-right" th:href="@{/booking/{musicEan}(musicId=${musicEan.ean})}" th:text="#{label.setAside}">Book</a>
+            <a th:if="${canBorrow}" class="btn btn-primary mb-2 ml-2 float-right" th:href="@{/booking/{musicEan}(musicEan=${music.ean})}" th:text="#{label.setAside}">Book</a>
          </div>
       </div>
    </header>
