Add counter for rank in booking

--- a/web/src/main/resources/templates/booking/booking-all.html
+++ b/web/src/main/resources/templates/booking/booking-all.html
@@ -44,7 +44,7 @@
                   <div class="input-group-prepend mb-2">
                      <div class="input-group-text" th:text="#{label.bookingRank}">Booking rank</div>
                   </div>
-                  <span class="form-control" th:text="${booking.media.stock}">Rank</span>
+                  <span class="form-control" th:text="${booking.rank}">Rank</span>
                   <div class="input-group-prepend mb-2">
                      <div class="input-group-text" th:text="#{label.returnDate}">Next return</div>
                   </div>
