--- a/web/src/main/resources/templates/video/video-all.html
+++ b/web/src/main/resources/templates/video/video-all.html
@@ -33,13 +33,13 @@
             <img  class="img-fluid" th:src="${@environment.getProperty('zuul.url') + 'media-api/images/VIDEO/' + video.ean}" alt="photo"/>
          </div>
          <div class="card-footer row">
-            <div th:if="${video.stock > 0}" class="input-group col-md-9">
+            <div th:if="${video.stock >= 0}" class="input-group col-md-9">
                <div class="input-group-prepend mb-2">
                   <div class="input-group-text" th:text="#{label.stock}">Stock</div>
                </div>
                <span class="form-control" th:text="${video.stock}">Remaining </span>
             </div>
-            <div th:if="${video.stock <= 0}"  class="input-group col-md-9">
+            <div th:if="${video.stock < 0}"  class="input-group col-md-9">
                <div class="input-group-prepend mb-2">
                   <div class="input-group-text" th:text="#{label.booking}">Booking</div>
                </div>
