changement couleur bouton

--- a/web-api/src/main/resources/templates/borrowing/borrowing-all.html
+++ b/web-api/src/main/resources/templates/borrowing/borrowing-all.html
@@ -46,8 +46,8 @@
                      <div class="input-group-text" th:text="#{label.numberOfExtensions}">Number of extensions</div>
                   </div>
                   <span class="form-control" th:text="${borrowing.extended}">Extended</span>
-                  <a th:if="${borrowing.borrowingDate > restitutionDate}" class="btn btn-secondary mb-2" th:href="@{'/borrowings/extend/' + ${borrowing.media.id}}" th:text="#{label.extend}">Extend</a>
-                  <a th:if="${borrowing.borrowingDate < restitutionDate}" class="btn btn-success mb-2" th:href="@{'/borrowings/extend/' + ${borrowing.media.id}}" th:text="#{label.extend}">Extend</a>
+                  <a th:if="${borrowing.borrowingDate < restitutionDate}" class="btn btn-secondary mb-2" th:text="#{label.extend}">Extend</a>
+                  <a th:if="${borrowing.borrowingDate > restitutionDate}" class="btn btn-success mb-2" th:href="@{'/borrowings/extend/' + ${borrowing.media.id}}" th:text="#{label.extend}">Extend</a>
                </div>
             </div>
 
